Fix switch functionality

--- a/examples/switch/switch.html
+++ b/examples/switch/switch.html
@@ -64,6 +64,13 @@
           tabindex="0">
             <span></span>
             Bigger font sizes</div>
+
+        <div id="switch2" 
+          role="switch checkbox"
+          aria-checked="false"
+          tabindex="0">
+            <span></span>
+            Bigger font sizes</div>
       
     </div>
     <div role="separator" id="ex_end_sep" aria-labelledby="ex_end_sep ex_label" aria-label="End of"></div>
@@ -74,7 +81,7 @@
     <ol>
       <li>
         A switch should be used when the change is automatically saved.
-        There should be no need to activate a “save” button for the change to take any affect.
+        There should be no need to activate a “save” button for the change to take affect.
       </li>
       <li>There is a fallback role of <code>checkbox</code> in case the used assistive technology doesn’t support the <code>switch</code> role.</li>
     </ol>
@@ -102,7 +109,7 @@
           <th><kbd>Space</kbd></th>
           <td>
             <ul>
-              <li>Toggle check switch between checked and unchecked.</li>
+              <li>Toggle switch between checked and unchecked.</li>
             </ul>
           </td>
         </tr>
