Add keyboard support

--- a/examples/switch/switch.html
+++ b/examples/switch/switch.html
@@ -58,19 +58,21 @@
       The div for the rendered HTML source is in the last section of the page.
     -->
     <div id="ex1">
-        <div id="switch" 
+        <div id="switch-text"
           role="switch checkbox"
           aria-checked="false"
           tabindex="0">
             <span></span>
-            Bigger font sizes</div>
+            Larger text</div>
 
-        <div id="switch2" 
+        <br>
+
+        <div id="switch-colours"
           role="switch checkbox"
           aria-checked="false"
           tabindex="0">
             <span></span>
-            Bigger font sizes</div>
+            Invert colours</div>
       
     </div>
     <div role="separator" id="ex_end_sep" aria-labelledby="ex_end_sep ex_label" aria-label="End of"></div>
