Add line about where to comment

--- a/examples/switch/switch.html
+++ b/examples/switch/switch.html
@@ -35,12 +35,10 @@
 <body>
   <main> <!--  Repeat the name of the example in this H1  -->
   <h1>Switch Example</h1>
+  <p>Comments on this code example are welcome in <a href="https://github.com/w3c/aria-practices/issues/243">Issue 243</a>.</p>
   <p>
     <!-- Provide an overview of the example where the first sentence provides a link to the section of aria-practices.html that describes the pattern this example implements. -->
-    Replace this paragraph with an overview of the example that is something like the following. The
-    below example section demonstrates a simple checkbox that implements the
-    <a href="../../#checkbox">design pattern for checkbox.</a>
-    This example uses ... summarize salient techniques )
+    The below example section demonstrates a switch that implements the <a href="../../#switch">design pattern for switch</a>.
   </p>
   <p>Similar examples include: </p>
   <ul>
