Remove enter key as an activation key

--- a/examples/switch/switch.html
+++ b/examples/switch/switch.html
@@ -81,7 +81,7 @@
     <ol>
       <li>
         A switch should be used when the change is automatically saved.
-        There should be no need to activate a “save” button for the change to take affect.
+        There should be no need to activate a “save” button for the change to take effect.
       </li>
       <li>There is a fallback role of <code>checkbox</code> in case the used assistive technology doesn’t support the <code>switch</code> role.</li>
     </ol>
