Change width attribute to inline style

--- a/examples/landmarks/at.html
+++ b/examples/landmarks/at.html
@@ -90,7 +90,7 @@
               </table>
 
               <p>Screen shot of list of landmarks in JAWS</p>
-              <p><img src="images/landmarks-jaws.png" alt="Screen shot of list of landmarks in voice over" width="80%"></p>
+              <p><img src="images/landmarks-jaws.png" alt="Screen shot of list of landmarks in voice over" style="width:80%;"></p>
             
             </section>
 
@@ -123,7 +123,7 @@
                 
               </table>         
               <p>Screen shot of list of landmarks in NVDA</p>
-                <p><img src="images/landmarks-nvda.png" alt="Screen shot of list of landmarks in voice over" width="80%"></p>
+                <p><img src="images/landmarks-nvda.png" alt="Screen shot of list of landmarks in voice over" style="width:80%;"></p>
             </section>
 
             <section aria-labelledby="we">
