Updated descriptions of multithumb slider

--- a/aria-practices.html
+++ b/aria-practices.html
@@ -1733,7 +1733,7 @@
       <section class="notoc">
         <h4>Example</h4>
         <ul>
-          <li><a href="examples/slider/multithumb-slider.html">Multi-Thumb Slider Example</a>: Demonstrates a two thumb silder to pick a price range.</li>
+          <li><a href="examples/slider/multithumb-slider.html">Multi-Thumb Slider Examples</a>: Demonstrates a two thumb silder to pick a price range for an airline flight and a hotel reservation.</li>
         </ul>
       </section>
 
