Added more combobox data; Fixed issue with editing input

--- a/examples/combobox/aria1.1pattern/listbox-combo.html
+++ b/examples/combobox/aria1.1pattern/listbox-combo.html
@@ -60,7 +60,7 @@
             aria-activedescendant=""
             id="ex1-input">
         </div>
-        <ul role="listbox" id="ex1-listbox" class="hidden"></ul>
+        <ul role="listbox" id="ex1-listbox" class="listbox hidden"></ul>
       </div>
     </div>
     <div role="separator" id="ex_end_sep" aria-labelledby="ex_end_sep ex_label" aria-label="End of"></div>
