--- a/examples/combobox/aria1.1pattern/listbox-combo.html
+++ b/examples/combobox/aria1.1pattern/listbox-combo.html
@@ -47,12 +47,13 @@
       The div for the rendered HTML source is in the last section of the page.
     -->
     <div id="ex1">
-      <label for="ex1-input" class="combobox-label">
+
+      <p>Example using listbox</p>
+      <label id="ex1-label" class="combobox-label">
         Fruits and vegetables
       </label>
       <div class="combobox-wrapper">
         <div role="combobox"
-          aria-label="Tag"
           aria-expanded="false"
           aria-owns="ex1-listbox"
           aria-haspopup="listbox"
@@ -61,19 +62,25 @@
             aria-autocomplete="list"
             aria-controls="ex1-listbox"
             aria-activedescendant=""
+            aria-labelledby="ex1-label"
             id="ex1-input">
         </div>
-        <ul role="listbox" id="ex1-listbox" class="listbox hidden"></ul>
+        <ul
+          aria-labelledby="ex1-label"
+          role="listbox"
+          id="ex1-listbox"
+          class="listbox hidden">
+        </ul>
       </div>
     </div>
 
+    <p>Another listbox example where first item is preselected</p>
     <div id="ex2">
-      <label for="ex2-input" class="combobox-label">
+      <label id="ex2-label" class="combobox-label">
         Fruits and vegetables
       </label>
       <div class="combobox-wrapper">
         <div role="combobox"
-          aria-label="Tag"
           aria-expanded="false"
           aria-owns="ex2-listbox"
           aria-haspopup="listbox"
@@ -82,9 +89,15 @@
             aria-autocomplete="list"
             aria-controls="ex2-listbox"
             aria-activedescendant=""
+            aria-labelledby="ex2-label"
             id="ex2-input">
         </div>
-        <ul role="listbox" id="ex2-listbox" class="listbox hidden"></ul>
+        <ul
+          aria-labelledby="ex2-label"
+          role="listbox"
+          id="ex2-listbox"
+          class="listbox hidden">
+        </ul>
       </div>
     </div>
     <div role="separator" id="ex_end_sep" aria-labelledby="ex_end_sep ex_label" aria-label="End of"></div>
