Add third autocomplete both combobox example

--- a/examples/combobox/aria1.1pattern/listbox-combo.html
+++ b/examples/combobox/aria1.1pattern/listbox-combo.html
@@ -118,6 +118,14 @@
             aria-activedescendant=""
             aria-labelledby="ex3-label"
             id="ex3-input">
+          <div
+            class="combobox-dropdown"
+            id="ex3-combobox-arrow"
+            tabindex="-1"
+            role="button"
+            aria-label="Show vegetable options">
+            <img src="imgs/arrow_drop_down_grey_27x27.png" alt="">
+          </div>
         </div>
         <ul
           aria-labelledby="ex3-label"
