--- a/examples/combobox/aria1.1pattern/grid-combo.html
+++ b/examples/combobox/aria1.1pattern/grid-combo.html
@@ -10,10 +10,12 @@
 <script src="../../js/examples.js"></script>
 <script src="../../js/highlight.pack.js"></script>
 <script src="../../js/app.js"></script>
+<script src="../../js/utils.js" type="text/javascript"></script>
 
 <!--  js and css for this example. -->
 <link href="css/combobox-1.1.css" rel="stylesheet">
-<script src="js/combobox-1.1.js" type="text/javascript"></script>
+<script src="js/grid-combobox.js" type="text/javascript"></script>
+<script src="js/grid-combo-example.js" type="text/javascript"></script>
 </head>
 <body>
   <main>
@@ -45,18 +47,30 @@
       The div for the rendered HTML source is in the last section of the page.
     -->
     <div id="ex1">
-      <!--  Replace content of this div with the example.  -->
-      <p>This is the place where the reader will experience the functioning example.</p>
-      <ul>
-        <li>The HTML in this section along with the javascript and CSS it uses demonstrate
-          the design pattern.</li>
-        <li>
-          When developing an example implementation for this guide, please follow the
-          <a href="https://ianpouncey.github.io/code-guide/">APG example coding guidelines</a>
-          .
-        </li>
-        <!--  Target of previous link will need to be updated when we move the guidelines into the wiki from Ian's repo.  -->
-      </ul>
+      <label id="ex1-label" class="combobox-label">
+        Fruits and vegetables
+      </label>
+      <div class="combobox-wrapper">
+        <div role="combobox"
+          aria-expanded="false"
+          aria-owns="ex1-grid"
+          aria-haspopup="grid"
+          id="ex1-combobox">
+          <input type="text"
+            aria-autocomplete="list"
+            aria-controls="ex1-grid"
+            aria-activedescendant=""
+            aria-labelledby="ex1-label"
+            id="ex1-input">
+        </div>
+        <div
+          aria-labelledby="ex1-label"
+          role="grid"
+          id="ex1-grid"
+          class="grid hidden">
+        </div>
+      </div>
+    </div>
     </div>
     <div role="separator" id="ex_end_sep" aria-labelledby="ex_end_sep ex_label" aria-label="End of"></div>
   </section>
