--- a/examples/combobox/aria1.1pattern/listbox-combo.html
+++ b/examples/combobox/aria1.1pattern/listbox-combo.html
@@ -10,10 +10,12 @@
 <script src="../../js/examples.js"></script>
 <script src="../../js/highlight.pack.js"></script>
 <script src="../../js/app.js"></script>
+<script src="../../js/utils.js" type="text/javascript"></script>
 
 <!--  js and css for this example. -->
 <link href="css/combobox-1.1.css" rel="stylesheet">
-<script src="js/combobox-1.1.js" type="text/javascript"></script>
+<script src="js/listbox-combobox.js" type="text/javascript"></script>
+<script src="js/listbox-combo-example.js" type="text/javascript"></script>
 </head>
 <body>
   <main>
@@ -45,18 +47,93 @@
       The div for the rendered HTML source is in the last section of the page.
     -->
     <div id="ex1">
-      <!--  Replace content of this div with the example.  -->
-      <p>This is the place where the reader will experience the functioning example.</p>
-      <ul>
-        <li>The HTML in this section along with the javascript and CSS it uses demonstrate
-          the design pattern.</li>
-        <li>
-          When developing an example implementation for this guide, please follow the
-          <a href="https://ianpouncey.github.io/code-guide/">APG example coding guidelines</a>
-          .
-        </li>
-        <!--  Target of previous link will need to be updated when we move the guidelines into the wiki from Ian's repo.  -->
-      </ul>
+
+      <p>Example using listbox</p>
+      <label id="ex1-label" class="combobox-label">
+        Fruits and vegetables
+      </label>
+      <div class="combobox-wrapper">
+        <div role="combobox"
+          aria-expanded="false"
+          aria-owns="ex1-listbox"
+          aria-haspopup="listbox"
+          id="ex1-combobox">
+          <input type="text"
+            aria-autocomplete="list"
+            aria-controls="ex1-listbox"
+            aria-activedescendant=""
+            aria-labelledby="ex1-label"
+            id="ex1-input">
+        </div>
+        <ul
+          aria-labelledby="ex1-label"
+          role="listbox"
+          id="ex1-listbox"
+          class="listbox hidden">
+        </ul>
+      </div>
+    </div>
+
+    <p>Another listbox example where first item is preselected</p>
+    <div id="ex2">
+      <label id="ex2-label" class="combobox-label">
+        Fruits and vegetables
+      </label>
+      <div class="combobox-wrapper">
+        <div role="combobox"
+          aria-expanded="false"
+          aria-owns="ex2-listbox"
+          aria-haspopup="listbox"
+          id="ex2-combobox">
+          <input type="text"
+            aria-autocomplete="list"
+            aria-controls="ex2-listbox"
+            aria-activedescendant=""
+            aria-labelledby="ex2-label"
+            id="ex2-input">
+        </div>
+        <ul
+          aria-labelledby="ex2-label"
+          role="listbox"
+          id="ex2-listbox"
+          class="listbox hidden">
+        </ul>
+      </div>
+    </div>
+
+    <p>A listbox example with inline autocomplete behavior</p>
+    <div id="ex3">
+      <label id="ex3-label" class="combobox-label">
+        Fruits and vegetables
+      </label>
+      <div class="combobox-wrapper">
+        <div role="combobox"
+          aria-expanded="false"
+          aria-owns="ex3-listbox"
+          aria-haspopup="listbox"
+          id="ex3-combobox">
+          <input type="text"
+            aria-autocomplete="both"
+            aria-controls="ex3-listbox"
+            aria-activedescendant=""
+            aria-labelledby="ex3-label"
+            id="ex3-input">
+          <div
+            class="combobox-dropdown"
+            id="ex3-combobox-arrow"
+            tabindex="-1"
+            role="button"
+            aria-label="Show vegetable options">
+            <img src="imgs/arrow_drop_down_grey_27x27.png" alt="">
+          </div>
+        </div>
+        <ul
+          aria-labelledby="ex3-label"
+          role="listbox"
+          id="ex3-listbox"
+          class="listbox hidden">
+        </ul>
+      </div>
     </div>
     <div role="separator" id="ex_end_sep" aria-labelledby="ex_end_sep ex_label" aria-label="End of"></div>
   </section>
