Multi-Thhumb Slider Pattern: restore link to feedback issue.

--- a/aria-practices.html
+++ b/aria-practices.html
@@ -1722,6 +1722,11 @@
     <section class="widget" id="slidertwothumb">
       <h3>Slider (Multi-Thumb)</h3>
       <p>
+        <strong>NOTE:</strong> Revisions to this pattern are in progress.
+        Please provide feedback in 
+        <a href="https://github.com/w3c/aria-practices/issues/221">issue 221.</a>
+      </p>
+      <p>
         A multi-thumb slider is a slider with two or more thumbs that each set a value in a group of related values, for example selecting a price range for a product or service.
         Many two-thumb sliders set a maximum and minimum value for a range, and the thumbs are not allowed to pass one another.
         That is, the thumb that sets the upper value of the range can not be set lower than the thumb that controls the lower value of the range.
